Fix visible-xl helper

--- a/css/global/responsive-helpers.css
+++ b/css/global/responsive-helpers.css
@@ -36,7 +36,8 @@ Visible helpers
 .visible-xs,
 .visible-sm,
 .visible-md,
-.visible-lg {
+.visible-lg,
+.visible-xl {
   display: none;
 }
 
